--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,26 @@
   "name": "Gastos de Barcos",
   "short_name": "Barcos",
   "description": "App para gestionar gastos de embarcaciones",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#f0f8ff",
+  "theme_color": "#1e5f7a",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
+  "name": "Gastos de Barcos",
+  "short_name": "Barcos",
+  "description": "App para gestionar gastos de embarcaciones",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f0f8ff",
